--- a/src/Johnson.Process.Website/Template/ConsultationAndQuotationToCsdMailTemplate.htm
+++ b/src/Johnson.Process.Website/Template/ConsultationAndQuotationToCsdMailTemplate.htm
@@ -13,14 +13,14 @@
         <tr>
             <td style="width:200px">项目名称</td>
             <td style="width:200px">${ProjectName}</td>
-            <td style="width:200px">成功机会(%)</td>
-            <td style="width:200px">${SucceedProbability}</td>
+            <td style="width:200px">办事处</td>
+            <td style="width:200px">${ApplyUserDepartmentName}</td>
         </tr>
         <tr>
+            <td >成功机会(%)</td>
+            <td>${SucceedProbability}</td>
             <td>预计签合同日期</td>
             <td>${ExpectSignContact}</td>
-            <td></td>
-            <td></td>
         </tr>
     </table>
     <h3>(第一部分) 非标报价</h3>
