--- a/src/Johnson.Process.Website/Template/ConsultationAndQuotation_TracerMailTemplate.htm
+++ b/src/Johnson.Process.Website/Template/ConsultationAndQuotation_TracerMailTemplate.htm
@@ -15,12 +15,16 @@
             <td style="width:200px">${ProjectName}</td>
             <td style="width:200px">办事处</td>
             <td style="width:200px">${ApplyUserDepartmentName}</td>
+            <td style="width:200px;background-color:Yellow;">申请人</td>
+            <td style="width:200px;background-color:Yellow;">${ApplyUserName}</td>
         </tr>
         <tr>
             <td >成功机会(%)</td>
             <td>${SucceedProbability}</td>
             <td>预计签合同日期</td>
             <td>${ExpectSignContact}</td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
     <h3>(第一部分) 非标报价</h3>
