--- a/src/Johnson.Process.Website/Template/ProductReworkChaosongMailTemplate.htm
+++ b/src/Johnson.Process.Website/Template/ProductReworkChaosongMailTemplate.htm
@@ -69,6 +69,6 @@
             <td>${XGCLDH}</td>
         </tr>
     </table>
-    <div><a href="${edoc2BaseUrl}/JohnsonProcess/ProductRework_Completed.aspx?incNo=${incidentNo}">详细信息</a></div>
+    <div><a href="${liuchengBaseUrl}/ProductRework_Completed.aspx?incNo=${incidentNo}">详细信息</a></div>
 </body>
 </html>
