--- a/src/Johnson.Process.Website/Template/ProductReworkChaosongMailTemplate.htm
+++ b/src/Johnson.Process.Website/Template/ProductReworkChaosongMailTemplate.htm
@@ -11,10 +11,16 @@
     <h3>基本信息</h3>
     <table>
         <tr>
-            <td style="width:200px">产品类型</td>
-            <td style="width:200px">${ProductType}</td>
-            <td style="width:200px">系列号</td>
-            <td style="width:200px">${XLH}</td>
+            <td style="width:200px">不合格编号</td>
+            <td style="width:200px">${FailureNo}</td>
+            <td style="width:200px"></td>
+            <td style="width:200px"></td>
+        </tr>
+        <tr>
+            <td >产品类型</td>
+            <td >${ProductType}</td>
+            <td >系列号</td>
+            <td >${XLH}</td>
         </tr>
         <tr>
             <td>名称</td>
