--- a/src/Johnson.Process.Website/css/default.css
+++ b/src/Johnson.Process.Website/css/default.css
@@ -1,4 +1,4 @@
-﻿body{ font-size: 80%; padding: 0.2em; }
+﻿body{ font-family:Arial, Helvetica, sans-serif; font-size: 80%; padding: 0.2em; }
 form{margin: 0; padding:0;}
 .header{width:100%; border-collapse: collapse; border-spacing: 0; border: 0px solid #C9DEFC;}
 .panelTitle{ background: url(../images/title_bg.gif) repeat-x left top; font-size:1.3em; border: 1px solid #C9DEFC; margin: 0; padding: 0; font-weight: bold; }
